mg2 final screen paper

--- a/Assets/SimpleLocalization/Resources/Localization/MG 2.csv
+++ b/Assets/SimpleLocalization/Resources/Localization/MG 2.csv
@@ -348,3 +348,14 @@ Johan earned a lot of money by signing the right papers. First, he gave enslaved
 Mit dem Schiff gelieferte Sachen wurden im Hafen entladen. Versklavte Menschen auch. Eine Gruppe solcher Menschen muss stattdessen am Strand nach Mauritsstad gelaufen sein.
 Auf diesen Papieren wurde aufgeschrieben, wie eine Gruppe von versklavten Menschen von Johann Moritz an portugiesische Zuckermühlenbesitzer verschenkt wurde.
 Durch seine Unterschrift auf den richtigen Papieren hat Johann viel dazu verdient. Zuerst hat er versklavte Menschen als Geschenke verteilt, und später hat er Geld für sie verlangt."
+,,,,
+,,,,
+CongratsMG2,"<b>Congrats, you finished!</b>
+New entries have been
+added!","<b>Congrats, you finished!</b>
+New entries have been
+added!","<b>Congrats, you finished!</b>
+New entries have been
+added!","<b>Congrats, you finished!</b>
+New entries have been
+added!"
