--- a/Assets/SimpleLocalization/Resources/Localization/Menu.csv
+++ b/Assets/SimpleLocalization/Resources/Localization/Menu.csv
@@ -1,5 +1,5 @@
 Key,English,German,Simplified English,Simplified German
-Swipe,- Swipe to Start -,- Wische zum Starten -,- Swipe to Start -,- Wische zum Starten -
+Swipe,- Swipe to Start -,- Wische mal zum Starten -,- Swipe to Start -,- Wische zum Starten -
 B1.Options,Options,Optionen,Options,Optionen
 AllesFresh,Are you still playing?,Bist du noch da?,Are you still playing?,Bist du noch da?
 continue1,Proceed to the first game?,Weiter zum ersten Spiel?,Proceed to the first game?,Weiter zum ersten Spiel?
